// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdaptableGrid /> by default matches with snapshot 1`] = `
<div
  className="sc-bdvvtL jmWqPH"
>
  <div
    className="sc-gsDKAQ ceAgle"
  >
    Test
  </div>
  <div
    className="sc-gsDKAQ hCLXEp"
  >
    Test
  </div>
</div>
`;

exports[`<AdaptableGrid /> with className matches with snapshot 1`] = `
<div
  className="sc-bdvvtL jmWqPH my_classname"
>
  <div
    className="sc-gsDKAQ buGawX my_second_classname"
  >
    Test
  </div>
  <div
    className="sc-gsDKAQ buGawX my_third_classname"
  >
    Test
  </div>
</div>
`;

exports[`<AdaptableGrid /> with custom HTML tags matches with snapshot 1`] = `
<dl
  className="sc-bdvvtL jmWqPH"
>
  <dd
    className="sc-gsDKAQ ceAgle"
  >
    Test
  </dd>
  <dt
    className="sc-gsDKAQ hCLXEp"
  >
    Test
  </dt>
</dl>
`;

exports[`<AdaptableGrid /> with some props matches with snapshot 1`] = `
<div
  className="sc-bdvvtL hKnETH"
>
  <div
    className="sc-gsDKAQ kKxhth"
    offset={3}
  >
    Test
  </div>
  <div
    className="sc-gsDKAQ cjNNib"
  >
    Test
  </div>
</div>
`;
